--- a/src/station11.html
+++ b/src/station11.html
@@ -9,6 +9,9 @@
   <body>
     <main>
       <form action="" method="post">
+        <input required type="email" id="email">
+        <input required type="password" minlength="6" id="password">
+        <input maxlength="20" type="text" id="nickname">
         <button type="submit">送信</button>
       </form>
     </main>
