--- a/src/station12.html
+++ b/src/station12.html
@@ -9,7 +9,10 @@
   <body>
     <!-- この<p>の中にレスポンスをコピペする -->
     <p>
-
+      {
+        "message": "https:\/\/images.dog.ceo\/breeds\/waterdog-spanish\/20180723_185544.jpg",
+        "status": "success"
+      }
     </p>
     <button onclick="fetchApi()">リクエスト</button>
   </body>
